// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Category Form Tests Renders the Create Category Form 1`] = `
<div>
  <h1
    class="display-3 title"
  >
    Create Category:
  </h1>
  <form
    class="text-input"
  >
    <div
      class="mb-3"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="title"
        >
          Title
        </label>
        <input
          class="form-control"
          name="title"
          placeholder="Enter title"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="mb-3 gx-5"
    >
      <button
        class="form-button btn btn-success"
        type="button"
      >
        Create
      </button>
      <button
        class="form-button btn btn-primary"
        type="button"
      >
        Reset
      </button>
      <button
        class="form-button btn btn-warning"
        type="button"
      >
        Discard
      </button>
    </div>
  </form>
  <div>
    <p
      class="response"
    />
  </div>
</div>
`;

exports[`Category Form Tests Renders the Edit Category Form 1`] = `
<div>
  <h1
    class="display-3 title"
  >
    Edit Category:
  </h1>
  <form
    class="text-input"
  >
    <div
      class="mb-3"
    >
      <p
        class="text-muted"
      >
        ID: 
        123
      </p>
      <p
        class="text-muted"
      >
        Date Added: 
        Tue, 06 Jul 2021 14:20:56 GMT
      </p>
    </div>
    <div
      class="mb-3"
    >
      <div
        class="form-group"
      >
        <label
          class="form-label"
          for="title"
        >
          Title
        </label>
        <input
          class="form-control"
          name="title"
          placeholder="Enter title"
          type="text"
          value="testing"
        />
      </div>
    </div>
    <div
      class="mb-3 gx-5"
    >
      <button
        class="form-button btn btn-success"
        type="button"
      >
        Update
      </button>
      <button
        class="form-button btn btn-primary"
        type="button"
      >
        Reset
      </button>
      <button
        class="form-button btn btn-warning"
        type="button"
      >
        Discard
      </button>
      <button
        class="form-button btn btn-danger"
        type="button"
      >
        Delete
      </button>
    </div>
  </form>
  <div>
    <p
      class="response"
    />
  </div>
</div>
`;

exports[`Category Form Tests Renders the Edit Category Form with ID 0 1`] = `
<div>
  <div
    class="justify-content-md-center row"
  >
    <p
      class=""
    >
      This category cannot be edited
    </p>
  </div>
</div>
`;
